tests/js/valid/comments/semantic-invariance.buri
@export
a = 1

@export
b = 1 -- 2
