tests/js/invalid/if/malformed-3.buri
a = if 1 == 2 do 3 else